--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.2.5
 django-crispy-forms==1.12.0
 django-environ==0.7.0
 django-heroku==0.3.1
+gunicorn==20.1.0
 psycopg2==2.9.1
 pytz==2021.1
 sqlparse==0.4.1
